--- a/Round4/Manuscript/Permuting_Accuracy.bib
+++ b/Round4/Manuscript/Permuting_Accuracy.bib
@@ -1931,3 +1931,25 @@ Contact: tongt@hkbu.edu.hk},
 	pages={841--848},
 	year={2002}
 }
+
+@article{bickel2004some,
+	title={Some theory for Fisher's linear discriminant function,naive Bayes', and some alternatives when there are many more variables than observations},
+	author={Bickel, Peter J and Levina, Elizaveta and others},
+	journal={Bernoulli},
+	volume={10},
+	number={6},
+	pages={989--1010},
+	year={2004},
+	publisher={Bernoulli Society for Mathematical Statistics and Probability}
+}
+
+@article{dobriban2018high,
+	title={High-dimensional asymptotics of prediction: Ridge regression and classification},
+	author={Dobriban, Edgar and Wager, Stefan and others},
+	journal={The Annals of Statistics},
+	volume={46},
+	number={1},
+	pages={247--279},
+	year={2018},
+	publisher={Institute of Mathematical Statistics}
+}
