--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -41,6 +41,12 @@
 
 
 \section{Large Sample}
+
+We have focused on the him-dim--small-sample setup because it is appropriate for many problems in neuroimaging and genetics. 
+To show that our conclusions are not due to the \emph{small-sample}, but rather, to the \emph{high-dim}, we scale our basic setup ten-fold. 
+Fixing 
+
+
 The results, reported in Figure~\ref{fig:large-sample}, are qualitatively similar to the high-dim--small-sample of Figure~\ref{fig:simulation_1}.
 \begin{figure}[h]
 	\centering
@@ -50,7 +56,15 @@ The results, reported in Figure~\ref{fig:large-sample}, are qualitatively simila
 \end{figure}
 
 
+
+
+
+%%%% Sphericity
 \section{Departure From Sphericity}
+In the main text, we have departed from the sphericity assumption, by allowing $\Sigma$ to be an $AR(1)$ covariance. 
+To verify that two-group tests have more power that accuracy tests, and that the power depends on the direction of the signal with respect to the PCs of the noise, we try other covariance structures. 
+As seen in Figures \ref{fig:dependence_2} and \ref{fig:dependence_3}, our findings hold also for long-memory Brownian motion correlations, and for an arbitrary (random) correlation.
+
 
 
 \begin{figure}[h]
@@ -107,7 +121,13 @@ The results, reported in Figure~\ref{fig:large-sample}, are qualitatively simila
 
 
 
+
+
+
 \section{Departure From Shift Alternatives}
+
+In the main text we have argued that shift alternatives are the most common in the univariate statistical literature. 
+They are also very common in the multivariate literature, as they are implied by Fisher's LDA model, and in multivariate analysis of variance (MANOVA).
 
 
 
@@ -332,10 +352,30 @@ As usual, two-group tests dominate accuracy-tests, only this time, the winners a
 \label{sec:fix_snr}
 
 For a fair comparison between simulations, in particular between those with different $\Sigma$, we needed to fix the difficulty of the problem.
-We fix the Kullback–Leibler Divergence between distributions of sample means. 
-Abusing notation, we fix $KL[\bar x_1,\bar x_0]=c^2 p$, which is the same as fixing $\Vert \mu \Vert^2_\Theta$, with the exception of the large sample (\ref{sec:large-sample}) and the heavytailed analysis (\ref{sec:heavytailed}). 
+We fix the Kullback–Leibler Divergence (KLD) between distributions of sample means. 
+Formally, the KLD between two Gaussian populations is given by 
+\begin{align}
+\label{eq:KLD}
+	KL[x_1,x_0]=\frac{1}{2}\left(
+	\log \frac{\det \Sigma_0}{\det \Sigma_1}-p+Tr(\Sigma_0^{-1}\Sigma_1)+(\mu_0-\mu_1)'\Sigma^{-1}_0(\mu_0-\mu_1)
+	\right),
+\end{align}
+where $x_y\sim\mathcal{N}(\mu_y,\Sigma_y)$.
+In the case of the sample means, of two shifted groups of size $n$, then 
+\begin{align}
+\label{eq:mahalanobis}
+	KL[\bar x_1,\bar x_0]=
+	\frac{n}{2}\mu'\Sigma^{-1}\mu=
+	\frac{n}{2}\Vert \mu \Vert_\Theta^2,
+\end{align}
+where $\mu:=\mu_1-\mu_0$. 
+%For spherical populations, $\Sigma=I$, and thus $\Vert \mu \Vert_\Theta^2=\Vert \mu \Vert_2^2$.
+%For a dense shift of equal magnitude, $\mu=(c,\dots,c)$, so that $\Vert \mu \Vert_2^2=p \, c^2$. 
 
-Our choice implies that the Euclidean norm of $\mu:=\mathbb{E}(x_1)-\mathbb{E}(x_0)$ varies with $\Sigma$, with the sample size, and with the direction of the signal.
+In most of our simulations we fixed $n \Vert \mu \Vert_\Theta^2$. 
+The logistic regression setup is an exception because... [TODO: relate to logistic regression]
+
+Fixing $n \Vert \mu \Vert_\Theta^2$ implies that the Euclidean norm of $\mu$ varies with $\Sigma$, with the sample size, and with the direction of the signal.
 An initial intuition may suggest that detecting signal in the low variance PCs is easier than in the high variance PCs. 
 This is true when fixing $\Vert \mu \Vert_2$, but not when fixing $\Vert \mu \Vert_{\Theta}$.
 
