--- a/Round4/Manuscript/supplementary.tex
+++ b/Round4/Manuscript/supplementary.tex
@@ -128,49 +128,85 @@ As seen in Figures \ref{fig:dependence_2} and \ref{fig:dependence_3}, our findin
 
 In the main text we have argued that shift alternatives are the most common in the univariate statistical literature. 
 They are also very common in the multivariate literature, as they are implied by Fisher's LDA model, and in multivariate analysis of variance (MANOVA).
-
+On the other hand, effects may manifest themselves in many ways. 
+We thus verify our statements in models which are not ``pure shifts''. 
+These include logistic regression, and a mixture class. 
 
 
 \subsection{Logistic Regression and Interactions}
 
-In Figure~\ref{fig:logistic-main-and-interactions} we report the usual power simulation, when generating from the logistic setup, with both main effects and second order interactions.
-We emphasize that all tests are performed in the original $x$ space, i.e., ignore the presence of interactions.
+In Figure~\ref{fig:logistic-main-and-interactions} we report the usual power simulation, when generating from the logistic setup, with both main effects and second order interactions (also reported in the main text).
 
 Formally, the logistic assumption implies that 
 $P(Y=1|x)=\exp(\eta)/[1+\exp(\eta)]$.
 Main-effects and second order interaction imply that 
 $\eta=x'\beta+x'Bx$, for some $p$-vector $\beta$, and symmetric matrix $B$.
 We also assume $X\sim \mathcal{N}(0,I_{p\times p})$.
+We perform the various tests in the original space, $x$, but also in the augmented space of second order interactions: 
+$$\tilde{x}:=\Phi(x)=(x_1,\dots,x_j,\dots,x_p,\dots,x_1x_1,\dots x_jx_{j'},\dots,x_p x_p).$$
 
-From Figure~\ref{fig:logistic-main-and-interactions} we see that in the logistic setup, with interactions, two-group tests still dominate. 
 
 \begin{figure}[th]
 	\centering
-	\includegraphics[width=0.5\columnwidth]{"art/file42"}
-	\caption{\textbf{Logistic Regression. Main effects and interactions.} 
-		Data generated via 
-		$Y|x \sim Binom(1,p(x));p(x)=\exp(\eta)/[1+\exp(\eta)];\eta=x'\beta+x'Bx; X\sim \mathcal{N}(0,I_{p\times p})$.  } 
+	\begin{subfigure}[t]{.45\columnwidth}
+		\centering
+		\includegraphics[width=1\columnwidth]{"art/file42"}
+		\caption{Data analyzed in the original space ($x$).}
+		\label{fig:interactions-in-original-space}
+	\end{subfigure}
+	\begin{subfigure}[t]{.45\columnwidth}
+		\centering
+		%	TODO: \includegraphics[width=1\columnwidth]{"art/file42"}
+		\caption{Data analyzed in augmented interactions space ($\tilde x$).}
+		\label{fig:interactions-in-augmented-space}
+	\end{subfigure}
+	\caption{\textbf{Logistic regression with second order interactions.} 
+		Data generated via $y|x \sim Binom(1,p(x));
+		p(x)=\exp(\eta)/[1+\exp(\eta)];
+		\eta=x'\beta+x'Bx; 
+		X\sim \mathcal{N}(0,I_{p\times p})$. } 
 	\label{fig:logistic-main-and-interactions}
 \end{figure}
 
-The logistic assumption differs from our original setup in that the logistic assumption states $Y|x$, instead of $X|y$, as in Fisher's LDA setup. 
-The logistic assumption implies that $X_0$ is no longer a shifted versions of $X_1$, even in the presence of main effects alone. 
-I.e., when $B$ is a $p\times p$ matrix of zeroes.
-While not a ``pure shift'', we expect that lacking interactions, the logistic model is very close to a shift. 
+
+
+
+
+The logistic assumption differs from our original setup in that the logistic assumption states $y|x$, instead of $x|y$. 
+The logistic assumption implies that $x_0$ is no longer a shifted versions of $x_1$, even in the presence of main effects alone. 
+I.e., when $B=0$.
+While not a ``pure shift'', we still expect that lacking interactions, the logistic model is very close to a shift. 
 This is verified in Figure \ref{fig:logistic-main-only}.
+
+
 
 
 \begin{figure}[th]
 	\centering
-	\includegraphics[width=0.5\columnwidth]{"art/file40"}
+	\begin{subfigure}[t]{.45\columnwidth}
+		\centering
+		\includegraphics[width=1\columnwidth]{"art/file40"}
+		\caption{Data analyzed in the original space ($x$).}
+		\label{fig:main-only-original-space}
+	\end{subfigure}
+	\begin{subfigure}[t]{.45\columnwidth}
+		\centering
+		%	TODO: \includegraphics[width=1\columnwidth]{"art/file42"}
+		\caption{Data analyzed in augmented interactions space ($\tilde x$).}
+		\label{fig:main-only-augmented-space}
+	\end{subfigure}
 	\caption{\textbf{Logistic Regression. Main effects only.} 
-		Data generated via 
-		$Y|x \sim Binom(1,p(x));
-		p(x)=\exp(\eta)/[1+\exp(\eta)];
-		\eta=x'\beta; 
-		X\sim \mathcal{N}(0,I_{p\times p})$.  } 
+	Data generated via 
+	$Y|x \sim Binom(1,p(x));
+	p(x)=\exp(\eta)/[1+\exp(\eta)];
+	\eta=x'\beta; 
+	X\sim \mathcal{N}(0,I_{p\times p})$.  } 
 	\label{fig:logistic-main-only}
 \end{figure}
+
+
+
+
 
 
 It is possible to use the logistic setup to generate data with no shift at all. 
